src/objects/KS_Condicion_de_obra_publico__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Hace de dominio público los detalles genéricos de una condición de obra</description>
    <fields>
        <fullName>KS_Estado_de_aprobacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estado de aprobación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Estado_de_aprobacion_icon__c</fullName>
        <formula>IF(  KS_Estado_de_aprobacion__c  = TRUE, IMAGE(&quot;/resource/1468564158000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1468564136000/flag_red_png&quot;,&quot;KO&quot;,16,16) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado de aprobación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_ID_Condicion__c</fullName>
        <externalId>true</externalId>
        <label>ID Condición</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Condiciones de obra</relationshipLabel>
        <relationshipName>Condiciones_de_obra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitante</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condiciones_de_obra7</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Condición de obra</label>
    <nameField>
        <displayFormat>COO-{00000}</displayFormat>
        <label>COO-id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones de obra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>